# blaze-ts.nvim

./: .envrc  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  build.zig  build.zig.zon  citation.bib  flake.nix  go.mod  grammar.js  lazy.lua  package-lock.json  package.json  pixi.toml  pyproject.toml  renovate.json  rust-toolchain  setup.py  shell.nix  tree-sitter.json  treefmt.nix
.github/workflows/: fh.yml
bindings/go/: binding_test.go
bindings/python/tree_sitter_mojo/: binding.c
lua/: blaze_lib.lua  init.lua  loader.lua
lua/blaze-ts/: config.lua  init.lua  lsp.lua  parser.lua  reload.lua  ui.lua  utils.lua
lua/blaze-ts/tools/: magic.lua
parser/: mojo.wasm
plugin/: blaze-ts.lua
runtime/queries/mojo/: highlights.scm
src/: grammar.js  grammar.json  main.zig  node-types.json  parser.zig  scanner.c
src/tree_sitter/: parser.h
